src/index.css
@import "tailwindcss";

@theme {
  /* Fonts */
  --font-display: 'Manrope', sans-serif;

  /* Colors */
  --color-primary: #2985a3;
  --color-primary-hover: #206a82;

  --color-secondary: #57818e;

  --color-success: #40BF40;
  --color-success-bg: #ecfdf5;

  --color-surface-light: #ffffff;
  --color-surface-dark: #232629;

  --color-background-light: #f9fafb;
  --color-background-dark: #1a1d21;

  --color-border-light: #e5e7eb;

  --color-text-main: #101719;
}

@layer base {
  body {
    /* Using the new utility classes derived from variables */
    @apply bg-background-light text-text-main font-display antialiased;
  }
}

@layer utilities {
  @keyframes shake {
    0% {
      transform: rotate(0deg);
    }

    25% {
      transform: rotate(0.5deg);
    }

    50% {
      transform: rotate(0deg);
    }

    75% {
      transform: rotate(-0.5deg);
    }

    100% {
      transform: rotate(0deg);
    }
  }

  .animate-shake {
    animation: shake 0.2s ease-in-out infinite;
  }
}

